--- a/attendee-service/src/main/resources/application.properties
+++ b/attendee-service/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=attendee-service
-#logging.level.org.springframework.web=trace
 logging.level.org.com.ems=trace
 logging.level.org.springframework.r2dbc=debug
-#server.servlet.context-path=/api
 #random port
-server.port=0
+server.port=8081
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 eureka.instance.preferIpAddress=true
+eureka.instance.appname=attendee-service
