--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,6 +1,19 @@
+#server.port=8761
+#eureka.client.register-with-eureka=false
+##eureka.server.enableSelfPreservation=false
+##management.security.enabled=false
+#logging.level.com.netflix.eureka=trace
+#eureka.client.eureka-server-d-n-s-name=localhost
+##eureka.client.use-dns-for-fetching-service-urls=true
+##eureka.client.eureka-server-u-r-l-context=eureka
+#eureka.client.webclient.enabled=true
+##eureka.instance.hostname=localhost
+##eureka.client.service-url.default-zone=http://localhost:8761/eureka
+##eureka.instance.prefer-ip-address=true
+##eureka.client.fetch-registry=true
 server.port=8761
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-#eureka.server.enableSelfPreservation=false
+#eureka.client.webclient.enabled=true
 #management.security.enabled=false
-logging.level.com.netflix.eureka=debug
+logging.level.com.netflix.eureka=trace
