--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -4,6 +4,7 @@ logging.level.org.com.ems=trace
 logging.level.org.springframework.r2dbc=debug
 #server.servlet.context-path=/api
 #random port
-server.port=0
+server.port=8082
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 eureka.instance.preferIpAddress=true
+eureka.instance.appname=event-service
