--- a/pom.xml
+++ b/pom.xml
@@ -1,108 +1,100 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.github.evaggelos99</groupId>
-	<artifactId>ems-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>io.github.evaggelos99</groupId>
+    <artifactId>ems-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<properties>
-		<sonar.organization>evaggelos99-f5395fbc</sonar.organization>
-  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<java.version>17</java.version>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jakarta.persistence.version>3.2.0-M2</jakarta.persistence.version>
-		<jakarta.persistence.validation.version>3.1.0-M2</jakarta.persistence.validation.version>
-		<org.springframework.boot.version>3.2.4</org.springframework.boot.version>
-		<org.apache.commons.version>3.14.0</org.apache.commons.version>
-		<org.apache.commons.version>3.14.0</org.apache.commons.version>
-		<nl.jqno.equalsverifier.version>3.16</nl.jqno.equalsverifier.version>
-		<com.h2database.version>2.2.224</com.h2database.version>
-		<org.hibernate.version>5.6.15.Final</org.hibernate.version>
-		<org.hibernate.validator.version>8.0.1.Final</org.hibernate.validator.version>
-		<springdoc.openapi.starter.webmvc.ui.version>2.5.0</springdoc.openapi.starter.webmvc.ui.version>
-		<org.apache.maven.plugins.version>3.4.0</org.apache.maven.plugins.version>
-		<hibernate.core.version>6.1.7.Final</hibernate.core.version>
-		<postgres.version>42.7.3</postgres.version>
-	</properties>
+    <properties>
+        <sonar.organization>evaggelos99-f5395fbc</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <org.springframework.boot.version>3.2.4</org.springframework.boot.version>
+        <org.apache.commons.version>3.14.0</org.apache.commons.version>
+        <org.apache.commons.version>3.14.0</org.apache.commons.version>
+        <nl.jqno.equalsverifier.version>3.16</nl.jqno.equalsverifier.version>
+        <com.h2database.version>2.2.224</com.h2database.version>
+        <org.hibernate.version>5.6.15.Final</org.hibernate.version>
+        <org.hibernate.validator.version>8.0.1.Final</org.hibernate.validator.version>
+        <springdoc.openapi.starter.webflux.ui.version>2.7.0</springdoc.openapi.starter.webflux.ui.version>
+        <org.apache.maven.plugins.version>3.4.0</org.apache.maven.plugins.version>
+        <hibernate.core.version>6.1.7.Final</hibernate.core.version>
+        <postgres.version>42.7.3</postgres.version>
+    </properties>
 
-	<modules>
-		<module>event-management-system</module>
-		<module>common-api</module>
-		<module>sponsor-api</module>
-		<module>sponsor-service</module>
-		<module>attendee-api</module>
-		<module>attendee-service</module>
-		<module>organizer-api</module>
-		<module>organizer-service</module>
-		<module>event-api</module>
-		<module>event-service</module>
-		<module>ticket-api</module>
-		<module>ticket-service</module>
-		<!-- <module>event-producer</module>-->
-		<module>eureka-server</module>
-	</modules>
+    <modules>
+<!--        <module>event-management-system</module>-->
+        <module>common-api</module>
+        <module>sponsor-api</module>
+        <module>sponsor-service</module>
+        <module>attendee-api</module>
+        <module>attendee-service</module>
+        <module>organizer-api</module>
+        <module>organizer-service</module>
+        <module>event-api</module>
+        <module>event-service</module>
+        <module>ticket-api</module>
+        <module>ticket-service</module>
+        <!-- <module>event-producer</module>-->
+        <module>eureka-server</module>
+    </modules>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>${org.apache.commons.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>nl.jqno.equalsverifier</groupId>
-			<artifactId>equalsverifier</artifactId>
-			<version>${nl.jqno.equalsverifier.version}</version>
-			<scope>test</scope>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${org.apache.commons.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>nl.jqno.equalsverifier</groupId>
+            <artifactId>equalsverifier</artifactId>
+            <version>${nl.jqno.equalsverifier.version}</version>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>2023.0.3</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>3.3.2</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-starter-parent</artifactId>
-				<version>2023.0.3</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2024.0.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>3.4.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-parent</artifactId>
+                <version>2024.0.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>${org.apache.maven.plugins.version}</version>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0</version>
-			</plugin>
-
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
