--- a/attendee-service/pom.xml
+++ b/attendee-service/pom.xml
@@ -72,6 +72,10 @@
             <version>${springdoc.openapi.starter.webflux.ui.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
             <exclusions>
@@ -106,6 +110,11 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>io.github.evaggelos99</groupId>
+            <artifactId>kafka-lib</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
