--- a/attendee-service/src/main/resources/application.properties
+++ b/attendee-service/src/main/resources/application.properties
@@ -3,3 +3,11 @@ logging.level.org.com.ems=trace
 logging.level.org.springframework.r2dbc=debug
 #random port
 server.port=8081
+
+#Service discovery:
+io.github.evaggelos99.ems.attendee.ticket-service-url=http://localhost:8085/ticket
+
+spring.kafka.producer.bootstrap-servers=localhost:9092
+io.github.evaggelos99.ems.event.topic.add-attendee=ems.event.add-attendee
+spring.kafka.producer.retries=3
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
