--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -5,3 +5,11 @@ logging.level.org.springframework.r2dbc=debug
 #server.servlet.context-path=/api
 #random port
 server.port=8082
+
+spring.kafka.producer.bootstrap-servers=localhost:9092
+io.github.evaggelos99.ems.event.topic.add-attendee=ems.event.add-attendee
+spring.kafka.producer.retries=3
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+#spring.kafka.consumer.group-id=default-group
