--- a/event-service/src/test/resources/application.properties
+++ b/event-service/src/test/resources/application.properties
@@ -1,1 +1,9 @@
+spring.kafka.producer.bootstrap-servers=kafka:29092
+io.github.evaggelos99.ems.event.topic.add-attendee=ems.event.add-attendee
+spring.kafka.producer.retries=3
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+#spring.kafka.consumer.bootstrap-servers=kafka:29092
+#spring.kafka.consumer.group-id=default-group
+
 spring.main.allow-bean-definition-overriding=true
