--- a/attendee-service/pom.xml
+++ b/attendee-service/pom.xml
@@ -113,8 +113,19 @@
         </dependency>
         <dependency>
             <groupId>io.github.evaggelos99</groupId>
+            <artifactId>testcontainer-kafka-lib</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.evaggelos99</groupId>
             <artifactId>kafka-lib</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
