--- a/event-service/pom.xml
+++ b/event-service/pom.xml
@@ -106,8 +106,19 @@
         </dependency>
         <dependency>
             <groupId>io.github.evaggelos99</groupId>
+            <artifactId>testcontainer-kafka-lib</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.evaggelos99</groupId>
             <artifactId>kafka-lib</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
