Apache kafka as a transport (#11)
* - Attendee service pushes to add attendee topic, Event service subscribes to add attendee topic

* change README.md

* remove monolith artifact

* Fix unit tests with test containers for KAFKA

* Clean up, add builders for DTOs, add test containers(KAFKA) for integration tests

* Fix SonarCube issues

* Fix more issues

--- a/event-service/pom.xml
+++ b/event-service/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>jackson-annotations</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -92,6 +96,28 @@
             <groupId>io.github.evaggelos99</groupId>
             <artifactId>r2dbc-h2</artifactId>
             <version>1.1.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.16.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.evaggelos99</groupId>
+            <artifactId>testcontainer-kafka-lib</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.evaggelos99</groupId>
+            <artifactId>kafka-lib</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
