--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
@@ -29,7 +29,6 @@
     </properties>
 
     <modules>
-        <!--        <module>event-management-system</module>-->
         <module>common-api</module>
         <module>sponsor-api</module>
         <module>sponsor-service</module>
@@ -41,7 +40,8 @@
         <module>event-service</module>
         <module>ticket-api</module>
         <module>ticket-service</module>
-        <!-- <module>event-producer</module>-->
+        <module>kafka-lib</module>
+        <module>testcontainer-kafka-lib</module>
     </modules>
 
     <dependencies>
@@ -56,7 +56,6 @@
             <version>${nl.jqno.equalsverifier.version}</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <dependencyManagement>
@@ -80,6 +79,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
