technical/create-users-with-authorization-and-authentication - Add authentication with role USER - Add Makefile WIP - Small refactors

--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,15 +1,18 @@
+# Spring
 spring.application.name=event-service
-#logging.level.org.springframework.web=trace
+
+# Logging
 logging.level.org.com.ems=trace
 logging.level.org.springframework.r2dbc=debug
-#server.servlet.context-path=/api
-#random port
+
 server.port=8082
 
+# Kafka
 spring.kafka.producer.bootstrap-servers=localhost:9092
 io.github.evaggelos99.ems.event.topic.add-attendee=ems.event.add-attendee
 spring.kafka.producer.retries=1
-#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-
 spring.kafka.consumer.bootstrap-servers=localhost:9092
-#spring.kafka.consumer.group-id=default-group
+
+# Security
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9011/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9011
