--- a/sponsor-service/src/main/resources/application.properties
+++ b/sponsor-service/src/main/resources/application.properties
@@ -1,7 +1,12 @@
+# Spring
 spring.application.name=sponsor-service
-#logging.level.org.springframework.web=trace
+
+# Logging
 logging.level.org.com.ems=trace
 logging.level.org.springframework.r2dbc=debug
-#server.servlet.context-path=/api
-#random port
+
 server.port=8084
+
+# Security
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9011/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9011
