--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,45 @@ services:
   #    depends_on:
   #      - broker
 
+  db-fusion:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${DATABASE_USERNAME}
+    ports:
+      - "6543:6543"
+    command: -p 6543
+    networks:
+      - backend
+    restart: unless-stopped
+    volumes:
+      - ./db_data:/var/lib/postgresql/data
+
+  fusionauth:
+    image: fusionauth/fusionauth-app:1.55.1
+    environment:
+      DATABASE_URL: jdbc:postgresql://db-fusion:6543/fusionauth
+      DATABASE_ROOT_USERNAME: ${POSTGRES_USER}
+      DATABASE_ROOT_PASSWORD: ${POSTGRES_PASSWORD}
+      DATABASE_USERNAME: ${POSTGRES_USER}
+      DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
+      FUSIONAUTH_APP_MEMORY: ${FUSIONAUTH_APP_MEMORY}
+      FUSIONAUTH_APP_RUNTIME_MODE: ${FUSIONAUTH_APP_RUNTIME_MODE}
+      FUSIONAUTH_APP_URL: http://fusionauth:9011
+    healthcheck:
+      test: curl --silent --fail http://localhost:9011/api/status -o /dev/null -w "%{http_code}"
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - backend
+    restart: unless-stopped
+    ports:
+      - 9011:9011
+    volumes:
+      - fusionauth_config:/usr/local/fusionauth/config
+
   attendee-service:
     container_name: attendee-service
     hostname: attendee-service
@@ -61,8 +100,11 @@ services:
       spring.kafka.producer.bootstrap-servers: broker:9092
       io.github.evaggelos99.ems.event.topic.add-attendee: ems.event.add-attendee
       spring.kafka.producer.retries: 3
+      spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
+      spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
     build:
-      context: .
+      context: ./attendee-service
+      dockerfile: Dockerfile
     ports:
       - "8081:8080"
     networks:
@@ -81,8 +123,11 @@ services:
       spring.kafka.consumer.bootstrap-servers: broker:9092
       io.github.evaggelos99.ems.event.topic.add-attendee: ems.event.add-attendee
       spring.kafka.producer.retries: 3
+      spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
+      spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
     build:
-      context: .
+      context: ./event-service
+      dockerfile: Dockerfile
     ports:
       - "8082:8080"
       - "5005:5005"
@@ -97,8 +142,11 @@ services:
       org.com.ems.db.port: 5432
       org.com.ems.db.host: db
       server.port: 8080
+      spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
+      spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
     build:
-      context: .
+      context: ./organizer-service
+      dockerfile: Dockerfile
     ports:
       - "8083:8080"
     networks:
@@ -112,8 +160,11 @@ services:
       org.com.ems.db.port: 5432
       org.com.ems.db.host: db
       server.port: 8080
+      spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
+      spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
     build:
-      context: .
+      context: ./ticket-service
+      dockerfile: Dockerfile
     ports:
       - "8084:8080"
     networks:
@@ -127,15 +178,19 @@ services:
       org.com.ems.db.port: 5432
       org.com.ems.db.host: db
       server.port: 8080
+      spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
+      spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
     build:
-      context: .
+      context: ./sponsor-service
+      dockerfile: Dockerfile
     ports:
       - "8085:8080"
     networks:
       - backend
 
-
-
 networks:
   backend:
     driver: bridge
+
+volumes:
+  fusionauth_config:
