--- a/event-service/Dockerfile
+++ b/event-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17
-ADD target/event-service-0.0.1-SNAPSHOT.jar app.jar
+FROM eclipse-temurin:17.0.14_7-jre-ubi9-minimal
+ADD target/event-service-0.0.1-SNAPSHOT-jar-with-dependencies.jar app.jar
 EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "/app.jar"]
