--- a/organizer-service/Dockerfile
+++ b/organizer-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17
-ADD target/organizer-service-0.0.1-SNAPSHOT.jar app.jar
+FROM eclipse-temurin:17.0.14_7-jre-ubi9-minimal
+ADD target/organizer-service-0.0.1-SNAPSHOT-jar-with-dependencies.jar app.jar
 EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "/app.jar"]
