--- a/sponsor-service/Dockerfile
+++ b/sponsor-service/Dockerfile
@@ -1,4 +1,3 @@
-FROM eclipse-temurin:17
-ADD target/sponsor-service-0.0.1-SNAPSHOT.jar app.jar
-EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+FROM eclipse-temurin:17.0.14_7-jre-ubi9-minimal
+ADD target/sponsor-service-0.0.1-SNAPSHOT-jar-with-dependencies.jar /app/app.jar
+CMD ["java", "-jar", "/app/app.jar"]
