--- a/ticket-service/pom.xml
+++ b/ticket-service/pom.xml
@@ -77,6 +77,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>io.github.evaggelos99</groupId>
+            <artifactId>security-lib</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
