technical/create-users-with-authorization-and-authentication WIP - Authrorize & Authenticate with fusionauth - Create sample role ROLE_USER for now - Adapt SecurityConfig - clean up

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>kafka-lib</module>
         <module>testcontainer-kafka-lib</module>
         <module>security-lib</module>
+        <module>flyway-script-migrator</module>
         <module>sponsor-service</module>
         <module>attendee-service</module>
         <module>organizer-service</module>
