--- a/attendee-service/Dockerfile
+++ b/attendee-service/Dockerfile
@@ -1,4 +1,3 @@
 FROM eclipse-temurin:17
-ADD target/attendee-service-0.0.1-SNAPSHOT-jar-with-dependencies.jar app.jar
-EXPOSE 8081
+ADD target/attendee-service-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
