--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:16-alpine
+    image: postgres:16.8-alpine3.20
     container_name: db
     hostname: db
     environment:
@@ -9,8 +9,6 @@ services:
       POSTGRES_DB: event-management-system
     ports:
       - "5433:5432"
-    volumes:
-      - ./scripts/docker-postgres/init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
     networks:
       - backend
 
@@ -50,11 +48,11 @@ services:
   #      - broker
 
   db-fusion:
-    image: postgres:16-alpine
+    image: postgres:16.8-alpine3.20
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${DATABASE_USERNAME}
+      POSTGRES_DB: ${POSTGRES_USER}
     ports:
       - "6543:6543"
     command: -p 6543
@@ -65,7 +63,8 @@ services:
       - ./db_data:/var/lib/postgresql/data
 
   fusionauth:
-    image: fusionauth/fusionauth-app:1.55.1
+    hostname: fusionauth
+    image: fusionauth/fusionauth-app:latest
     environment:
       DATABASE_URL: jdbc:postgresql://db-fusion:6543/fusionauth
       DATABASE_ROOT_USERNAME: ${POSTGRES_USER}
@@ -83,8 +82,10 @@ services:
     networks:
       - backend
     restart: unless-stopped
+    depends_on:
+      - db-fusion
     ports:
-      - 9011:9011
+      - "9011:9011"
     volumes:
       - fusionauth_config:/usr/local/fusionauth/config
 
@@ -102,9 +103,10 @@ services:
       spring.kafka.producer.retries: 3
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
-    build:
-      context: ./attendee-service
-      dockerfile: Dockerfile
+    depends_on:
+      - db
+      - broker
+      - flyway
     ports:
       - "8081:8080"
     networks:
@@ -125,12 +127,12 @@ services:
       spring.kafka.producer.retries: 3
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
-    build:
-      context: ./event-service
-      dockerfile: Dockerfile
+    depends_on:
+      - db
+      - broker
+      - flyway
     ports:
       - "8082:8080"
-      - "5005:5005"
     networks:
       - backend
 
@@ -144,9 +146,10 @@ services:
       server.port: 8080
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
-    build:
-      context: ./organizer-service
-      dockerfile: Dockerfile
+    depends_on:
+      - db
+      - broker
+      - flyway
     ports:
       - "8083:8080"
     networks:
@@ -162,11 +165,12 @@ services:
       server.port: 8080
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
-    build:
-      context: ./ticket-service
-      dockerfile: Dockerfile
+    depends_on:
+      - db
+      - broker
+      - flyway
     ports:
-      - "8084:8080"
+      - "8080:8080"
     networks:
       - backend
 
@@ -180,11 +184,30 @@ services:
       server.port: 8080
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
-    build:
-      context: ./sponsor-service
-      dockerfile: Dockerfile
+    depends_on:
+      - db
+      - broker
+      - flyway
     ports:
-      - "8085:8080"
+      - "8084:8080"
+    networks:
+      - backend
+
+  flyway:
+    container_name: flyway
+    hostname: flyway
+    image: 'evaggelosg99/flyway:latest'
+    restart: "no"
+    environment:
+      org.com.ems.db.port: 5432
+      org.com.ems.db.host: db
+      org.com.ems.db.user: user
+      org.com.ems.db.password: pass
+      org.com.ems.db.database: event-management-system
+    depends_on:
+      - db
+    ports:
+      - "12345:8080"
     networks:
       - backend
 
