technical/create-users-with-authorization-and-authentication - Fix unit tests for auth - Add unit tests - Clean up

--- a/event-service/src/test/resources/application.properties
+++ b/event-service/src/test/resources/application.properties
@@ -7,3 +7,7 @@ spring.kafka.producer.retries=3
 #spring.kafka.consumer.group-id=default-group
 
 spring.main.allow-bean-definition-overriding=true
+
+spring.main.web-application-type=reactive
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=dummy
