--- a/attendee-service/src/test/resources/application.properties
+++ b/attendee-service/src/test/resources/application.properties
@@ -2,5 +2,6 @@ spring.main.allow-bean-definition-overriding=true
 io.github.evaggelos99.ems.event.topic.add-attendee=ems.event.add-attendee
 spring.kafka.producer.retries=1
 io.github.evaggelos99.ems.attendee.ticket-service-url=localhost:28080
-
+spring.main.web-application-type=reactive
 #spring.kafka.producer.bootstrap-servers=broker:29092
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=dummy
