--- a/organizer-service/src/test/resources/application.properties
+++ b/organizer-service/src/test/resources/application.properties
@@ -1,1 +1,3 @@
 spring.main.allow-bean-definition-overriding=true
+spring.main.web-application-type=reactive
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=dummy
