--- a/event-management-system-dependencies/pom.xml
+++ b/event-management-system-dependencies/pom.xml
@@ -12,6 +12,7 @@
 
     <properties>
         <event-management-system.version>0.0.1-SNAPSHOT</event-management-system.version>
+        <org-postgresql.version>1.0.7.RELEASE</org-postgresql.version>
     </properties>
 
     <dependencyManagement>
@@ -25,6 +26,11 @@
                 <groupId>io.github.evaggelos99</groupId>
                 <artifactId>common-api</artifactId>
                 <version>${event-management-system.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>r2dbc-postgresql</artifactId>
+                <version>${org-postgresql.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.github.evaggelos99</groupId>
