--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -10,6 +10,7 @@ server.port=8082
 # Kafka
 spring.kafka.producer.bootstrap-servers=localhost:9092
 io.github.evaggelos99.ems.event.topic.add-attendee=ems.event.add-attendee
+io.github.evaggelos99.ems.event.topic.event-streaming=ems.event.simulator.event-streaming
 spring.kafka.producer.retries=1
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 
