--- a/organizer-api/pom.xml
+++ b/organizer-api/pom.xml
@@ -24,12 +24,16 @@
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations-jakarta</artifactId>
-            <version>2.2.22</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.github.evaggelos99</groupId>
             <artifactId>common-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>r2dbc-postgresql</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
