--- a/event-simulator/src/main/resources/application.properties
+++ b/event-simulator/src/main/resources/application.properties
@@ -18,4 +18,10 @@ io.github.evaggelos99.ems.event.simulator.topic.event-streaming=ems.event.simula
 io.github.evaggelos99.ems.event.simulator.topic.uuid=
 spring.kafka.producer.retries=3
 
-
+# Fusion Auth credentials
+io.github.evaggelos99.ems.event.simulator.grantType=
+io.github.evaggelos99.ems.event.simulator.username=
+io.github.evaggelos99.ems.event.simulator.password=
+io.github.evaggelos99.ems.event.simulator.clientId=
+io.github.evaggelos99.ems.event.simulator.clientSecret=
+io.github.evaggelos99.ems.event.simulator.fusionAuthClient=
