--- a/event-service/src/test/resources/application.properties
+++ b/event-service/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.kafka.producer.bootstrap-servers=kafka:29092
 io.github.evaggelos99.ems.event.topic.add-attendee=ems.event.add-attendee
-io.github.evaggelos99.ems.event.topic.event-streaming=ems.event.simulator.event-streaming
+io.github.evaggelos99.ems.event.topic.event-streaming-prefix=ems.event.simulator.event-streaming-id-
 spring.kafka.producer.retries=3
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
