--- a/event-simulator/src/main/resources/application.properties
+++ b/event-simulator/src/main/resources/application.properties
@@ -14,8 +14,7 @@ io.github.evaggelos99.ems.event.simulator.enabled=true
 
 # Kafka
 spring.kafka.producer.bootstrap-servers=localhost:9092
-io.github.evaggelos99.ems.event.simulator.topic.event-streaming=ems.event.simulator.event-streaming
-io.github.evaggelos99.ems.event.simulator.topic.uuid=
+io.github.evaggelos99.ems.event.simulator.topic.event-streaming-prefix=ems.event.simulator.event-streaming-id-
 spring.kafka.producer.retries=3
 
 # Fusion Auth credentials
