--- a/event-simulator/pom.xml
+++ b/event-simulator/pom.xml
@@ -65,6 +65,16 @@
             <groupId>io.github.evaggelos99</groupId>
             <artifactId>event-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>oauth2-oidc-sdk</artifactId>
+            <version>11.23.1</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
 
