--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <module>testcontainer-kafka-lib</module>
         <module>security-lib</module>
         <module>flyway-script-migrator</module>
-        <module>event-simulator</module>
+        <module>event-stream-simulator</module>
         <module>sponsor-service</module>
         <module>attendee-service</module>
         <module>organizer-service</module>
