--- a/flyway-script-migrator/src/main/resources/application.properties
+++ b/flyway-script-migrator/src/main/resources/application.properties
@@ -6,3 +6,5 @@ org.com.ems.db.port=5432
 org.com.ems.db.database=event-management-system
 org.com.ems.db.host=localhost
 org.com.ems.db.flyway.enabled=true
+org.com.ems.db.flyway.locations=db/migration
+org.com.ems.db.flyway.schemas=public, ems_sponsor, ems_attendee, ems_organizer, ems_event, ems_ticket, ems_admin
