--- a/event-management-system-dependencies/pom.xml
+++ b/event-management-system-dependencies/pom.xml
@@ -59,6 +59,11 @@
             </dependency>
             <dependency>
                 <groupId>io.github.evaggelos99</groupId>
+                <artifactId>user-api</artifactId>
+                <version>${event-management-system.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.evaggelos99</groupId>
                 <artifactId>kafka-lib</artifactId>
                 <version>${event-management-system.version}</version>
             </dependency>
@@ -100,6 +105,11 @@
             <dependency>
                 <groupId>io.github.evaggelos99</groupId>
                 <artifactId>ticket-service</artifactId>
+                <version>${event-management-system.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.evaggelos99</groupId>
+                <artifactId>user-service</artifactId>
                 <version>${event-management-system.version}</version>
             </dependency>
         </dependencies>
