--- a/ticket-service/src/main/resources/properties/db.properties
+++ b/ticket-service/src/main/resources/properties/db.properties
@@ -1,8 +1,8 @@
 # SQL credentials
 # full url: r2dbc:postgresql://localhost:5433/event-management-system
-org.com.ems.db.username=user
-org.com.ems.db.password=pass
-org.com.ems.db.port=5432
-org.com.ems.db.database=event-management-system
-org.com.ems.db.host=localhost
-org.com.ems.db.schema=ems_ticket
+io.github.evaggelos99.ems.ticket-service.db.username=user
+io.github.evaggelos99.ems.ticket-service.db.password=pass
+io.github.evaggelos99.ems.ticket-service.db.port=5432
+io.github.evaggelos99.ems.ticket-service.db.database=event-management-system
+io.github.evaggelos99.ems.ticket-service.db.host=localhost
+io.github.evaggelos99.ems.ticket-service.db.schema=ems_ticket
